// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component tests dot, severity: basic 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 7,
          "width": 7,
        },
        {
          "backgroundColor": "#188700",
        },
      ]
    }
  />
</View>
`;

exports[`Badge component tests dot, severity: danger 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 7,
          "width": 7,
        },
        {
          "backgroundColor": "#e26e63",
        },
      ]
    }
  />
</View>
`;

exports[`Badge component tests dot, severity: info 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 7,
          "width": 7,
        },
        {
          "backgroundColor": "#49a2ef",
        },
      ]
    }
  />
</View>
`;

exports[`Badge component tests dot, severity: success 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 7,
          "width": 7,
        },
        {
          "backgroundColor": "#68c170",
        },
      ]
    }
  />
</View>
`;

exports[`Badge component tests dot, severity: warning 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 7,
          "width": 7,
        },
        {
          "backgroundColor": "#ffb330",
        },
      ]
    }
  />
</View>
`;

exports[`Badge component tests severity: basic 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 21,
          "justifyContent": "center",
          "paddingHorizontal": 7,
          "paddingVertical": 0,
        },
        {
          "backgroundColor": "#188700",
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 10.5,
          "fontWeight": 700,
        }
      }
    >
      12
    </Text>
  </View>
</View>
`;

exports[`Badge component tests severity: basic 2`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 21,
          "justifyContent": "center",
          "paddingHorizontal": 7,
          "paddingVertical": 0,
        },
        {
          "backgroundColor": "#49a2ef",
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 10.5,
          "fontWeight": 700,
        }
      }
    >
      12
    </Text>
  </View>
</View>
`;

exports[`Badge component tests severity: basic 3`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 21,
          "justifyContent": "center",
          "paddingHorizontal": 7,
          "paddingVertical": 0,
        },
        {
          "backgroundColor": "#68c170",
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 10.5,
          "fontWeight": 700,
        }
      }
    >
      12
    </Text>
  </View>
</View>
`;

exports[`Badge component tests severity: basic 4`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 21,
          "justifyContent": "center",
          "paddingHorizontal": 7,
          "paddingVertical": 0,
        },
        {
          "backgroundColor": "#ffb330",
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 10.5,
          "fontWeight": 700,
        }
      }
    >
      12
    </Text>
  </View>
</View>
`;

exports[`Badge component tests severity: basic 5`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 21,
          "justifyContent": "center",
          "paddingHorizontal": 7,
          "paddingVertical": 0,
        },
        {
          "backgroundColor": "#e26e63",
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 10.5,
          "fontWeight": 700,
        }
      }
    >
      12
    </Text>
  </View>
</View>
`;

exports[`Badge component tests severity: default 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 21,
          "justifyContent": "center",
          "paddingHorizontal": 7,
          "paddingVertical": 0,
        },
        {
          "backgroundColor": "#188700",
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 10.5,
          "fontWeight": 700,
        }
      }
    >
      12
    </Text>
  </View>
</View>
`;

exports[`Badge component tests with custom style 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      {
        "margin": 10,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 7,
          "width": 7,
        },
        {
          "backgroundColor": "#188700",
        },
      ]
    }
  />
</View>
`;
